	* Fixed a bug that caused the Services list in the 'Add Log' dialog
	to be populated in reverse order.
2017-07-12 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug that caused the Service name to default to the first
	entry on the list when doing a 'Save As' for a log.
2017-07-12 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in the 'Edit Log' dialog that caused focus to be lost
	when clicking the 'Cut' or 'Delete' buttons.
2017-07-12 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 1.0.0.
2017-07-17 Fred Gleason <fredg@paravelsystems.com>
	* Added 'Run Length' counters to the Edit Log dialog.
2017-07-17 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in 'src/rdlogeditb/runlengthwidget.cpp' that caused
	a segfault when processing a log with no selected items.
2017-07-18 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in 'src/common/log.cpp' that caused newly inserted
	cart events to show a length value of '00:00'.
2017-07-18 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in 'src/common/transportbutton.cpp' that caused the
	Stop button to be the incorrect color.
2017-07-18 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'Print' button to the Edit Log dialog.
2017-07-18 Fred Gleason <fredg@paravelsystems.com>
	* Fixed bugs in the report viewer under Windows.
	* Added a 'version.txt' to the Windows installation.
2017-07-18 Fred Gleason <fredg@paravelsystems.com>
	* Incremeneted the package version to 1.1.0.
2017-07-26 Fred Gleason <fredg@paravelsystems.com>
	* Implemented cart dragging in RDLibraryb(1).
	* Implemented cart dropping in RDLogEditb(1).
2017-07-26 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in RDLogEditb(1) that caused start times to fail to be
	updated after inserting new events.
2017-07-26 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in RDLogEditb(1) that caused the incorrect icon to be
	displayed for macro carts when editing a log.